# wespa

./: .gitignore  00-allinone.ipynb  01-analysis.ipynb  01-batch.ipynb  02-descriptive-analysis.ipynb  03-graph-simulations.ipynb  LICENSE  ____analyis-old-allinone.ipynb  analysis.ipynb  jobs.db  pyproject.toml  pyvenv.cfg  readme-agenda.md  readme.md  requirements.txt
autobackup/: example.env  main.py  readme.md
autobackup/cwt_import/: nodemon.json  package-lock.json  package.json  readme.md  tsconfig.json  update_mods.py
autobackup/cwt_import/src/: importer.ts  index.ts  pg.ts
autobackup/extract_moodle_groups/: Readme.md  create_tables.sql  extract_moodle_groups.py  prep_analytics_table.py
doc/: demographic-data.odt  time-schedules-unformatted-german.odt
src/: app.py  collaboration_graph.py  extract_degrees.py  extract_easy_sync.py  extract_neighbours.py  extract_peer_review.py  extract_sessions.py  load.py  main_jobs.py  settings.py  text_quality.py  util.py
src/utils/: jsontxt.py
tests/: test_1.py
