[project]
name = "wesepa"
version = "0.1.0"
description = ""
authors = [
    {name = "nise",email = "niels.seidel@nise81.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4 (==4.14.2)",
    "couchdb (==1.2)",
    "flask (==3.1.2)",
    "flask-restx (==1.3.0)",
    "flask-socketio (==5.5.1)",
    "js2py (==0.74)",
    "language-tool-python (==2.9.4)",
    "matplotlib (==3.7.2)",
    "networkx (==3.1)",
    "nltk (==3.8.1)",
    "numpy (==2.3.4)",
    "pytest (==8.4.1)",
    "requests (==2.32.5)",
    "rq (==2.6.0)",
    "scikit-learn (==1.7.2)",
    "sentence-transformers (==2.6.1)",
    "setuptools (==68.0.0)",
    "textstat (==0.7.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

